# sandbox

./: .gitignore  .vscode-ctags  CMakeLists.txt  README.md  data  data.npy  data.txt
src/: .main.cpp.swp  main.cpp  vectorized.cpp
