include(ExternalProject)
cmake_minimum_required(VERSION 3.10)

project(dspc++ CXX)


set(CMAKE_CXX_STANDARD 17)

set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O2")

add_executable(${PROJECT_NAME} src/vectorized.cpp)

message(STATUS "PWD: ${CMAKE_CURRENT_SOURCE_DIR}")
set(STAGING_DIR "${CMAKE_CURRENT_SOURCE_DIR}/build")
message(STATUS "PWD: ${STAGING_DIR}")
ExternalProject_Add(spdlog
    PREFIX spdlog
    SOURCE_DIR ${PROJECT_SOURCE_DIR}/ext/spdlog
    CMAKE_ARGS -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
    -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
    -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
    -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
    -DCMAKE_INSTALL_PREFIX=${STAGING_DIR}
    -DSPDLOG_BUILD_SHARED=OFF
)

target_include_directories(${PROJECT_NAME} PUBLIC ext/spdlog/include)
#add_dependecies(${PROJECT_NAME} spdlog)

